# two_agent_implement-Erfan-s-edition-

twoagentimplement/: README.md  my_crew_log.json  pyproject.toml  requirements.txt
twoagentimplement/results/: final_solution.py
twoagentimplement/src/twoagentimplement/: crew.py  main.py
twoagentimplement/src/twoagentimplement/config/: agents.yaml  tasks.yaml
twoagentimplement/src/twoagentimplement/modules/: editor.py
twoagentimplement/src/twoagentimplement/tools/: docker_executer_code.py
