[project]
name = "twoagentimplement"
version = "0.1.0"
description = "twoagentimplement using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
twoagentimplement = "twoagentimplement.main:run"
run_crew = "twoagentimplement.main:run"
train = "twoagentimplement.main:train"
replay = "twoagentimplement.main:replay"
test = "twoagentimplement.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
